implement sonar recommended changes